cmake_minimum_required(VERSION 2.8)
project( calibration )
find_package( OpenCV REQUIRED )
find_package( PkgConfig )
pkg_check_modules( EIGEN3 REQUIRED eigen3 )
include_directories( ${EIGEN3_INCLUDE_DIRS} )
add_executable( calibration src/calibration.cpp )
add_executable( camera_calibration src/camera_calibration.cpp )
target_link_libraries( calibration ${OpenCV_LIBS} )
target_link_libraries( camera_calibration ${OpenCV_LIBS} )
